src/test/resources/org/nest/spl/_cocos/valid/illegalVarInFor.simple
module org.nest.spl._cocos.illegalVarInFor
x integer
for x in 1 ... 5 step 1:

end